<resources>
    <string name="app_name" translatable="false">UniVai</string>
    <string name="api_key" translatable="false">AIzaSyAQEzSH8uY_Rf8YtUrY1D2a3e4PmelhSgU</string>
    <string name="server_key" translatable="false">AAAAiAJZ87A:APA91bFVEiETtxZcBjtbf8_H1OI3wSd1ojWSBH2jYsOigMCnkepw1ffaKUqvx-LZYmcn8sKlyM1g2gumkSa2NE3cj2ewW2mRMNpj1s2Ff-QMfCTrJ2zRooaJdGsMcixvvNNm5X1wkmZp</string>
    <string name="date_pattern" translatable="false">dd/MM/yyyy HH:mm</string>
    <string name="email_text" translatable="false">Email</string>
    <string name="password_text" translatable="false">Password</string>
    <string name="ops_text" translatable="false">Opss</string>
    <string name="logout_text" translatable="false">LogOut</string>
    <string name="edit_mode_text" translatable="false">editMode</string>
    <string name="ride_id_text" translatable="false">rideId</string>
    <string name="user_id_text" translatable="false">userId</string>
    <string name="user_name_text" translatable="false">userName</string>
    <string name="image_id_text" translatable="false">imageId</string>
    <string name="rides_text" translatable="false">Rides</string>
    <string name="token_text" translatable="false">Token:</string>
    <string name="reset_text" translatable="false">Reset</string>
    <string name="rides_out_text" translatable="false">RIDES OUT</string>
    <string name="rides_in_text" translatable="false">RIDES IN</string>
    <string name="chat_text" translatable="false">Chat</string>
    <string name="name_text">Nome</string>
    <string name="surname_text">Cognome</string>
    <string name="phone_number_text">Numero di telefono</string>
    <string name="cancel_text">Cancella</string>
    <string name="confirm_password_text">Conferma Password</string>
    <string name="login_button_text">Accedi</string>
    <string name="signup_button_text">Registrati</string>
    <string name="enter_email_text">Inserisci il tuo indirizzo email:</string>
    <string name="forgot_password_text">Password dimenticata?</string>
    <string name="signUpRedirect_text">Non ancora registrato? Registrati</string>
    <string name="loginRedirect_text">Già iscritto? Accedi</string>
    <string name="map_text">Mappa</string>
    <string name="search_text">Cerca</string>
    <string name="settings_text">Impostazioni</string>
    <string name="start_text">Inserisci qualche tua informazione</string>
    <string name="car_checkbox_text">Hai la macchina?</string>
    <string name="select_uni_text">Seleziona il tuo dipartimento</string>
    <string name="start_button_text">Aggiungi dati</string>
    <string name="edit_button_text">Modifica dati</string>
    <string name="search_address_text">Cerca indirizzo</string>
    <string name="new_ride_title_text">Crea una nuova ride</string>
    <string name="new_ride_address_text">Inserisci l\'indirizzo di partenza</string>
    <string name="new_ride_check_text">Stesso indirizzo di casa</string>
    <string name="new_ride_time_text">Inserisci data e ora</string>
    <string name="new_ride_note_text">Inserisci delle note</string>
    <string name="new_ride_button_text">Crea ride</string>
    <string name="load_image_text">Carica la tua foto di profilo</string>
    <string name="skip_text">Salta</string>
    <string name="next_text">Prosegui</string>
    <string name="no_image_selected_text">Nessuna Immagine Selezionata</string>
    <string name="neutral_button_text">Ho capito!</string>
    <string name="warning_your_rides_text">Sembra che non hai creato ancora nessuna Rides.</string>
    <string name="warning_rides_text">Sembra che non c\'è nessuna Ride nei dintorni. Prova a modificare i filtri.</string>
    <string name="warning_location_text">Abbiamo avuto dei problemi nel trovare la tua posizione, prova ad attivare la geolocalizzazione. In caso riprova più tardi.</string>
    <string name="warning_request_filter_text">Sembra che non c\'è nessuna richiesta con questi criteri.</string>
    <string name="warning_ride_filter_text">Sembra che non c\'è nessuna Ride con questi criteri.</string>
    <string name="warning_no_request_out_text">Non hai ancora richiesto una Ride ad altri utenti.</string>
    <string name="warning_no_request_in_text">Nessun utente ha ancora richiesto una tua Ride.</string>
    <string name="italian_text">Italiano</string>
    <string name="english_text">Inglese</string>
    <string name="change_user_image_text">Cambia immagine profilo</string>
    <string name="edit_user_data_text">Modifica dati utente</string>
    <string name="ride_create_text">Ride creata da:</string>
    <string name="address_text">Indirizzo:</string>
    <string name="time_text">Partenza:</string>
    <string name="notes_text">Note:</string>
    <string name="date_and_time_text">Data e ora di partenza:</string>
    <string name="position_to_start_text">Posizione di partenza:</string>
    <string name="some_address_text">Mi faccio trovare al tuo indirizzo</string>
    <string name="some_address_info_text">L\'utente si farà trovare nel tuo punto di partenza</string>
    <string name="other_address_text">Mi faccio trovare in un altro indirizzo</string>
    <string name="book_text">Prenota</string>
    <string name="book_ride_text">Prenota la tua Ride</string>
    <string name="search_rides_text">Cerca Rides</string>
    <string name="accepted_text">Accettata</string>
    <string name="accept_text">Accetta</string>
    <string name="pending_text">In Attesa</string>
    <string name="refused_text">Rifiutata</string>
    <string name="refuse_text">Rifiuta</string>
    <string name="request_by_text">Ride richiesta da:</string>
    <string name="appointment_text">Appuntamento:</string>
    <string name="filter_text">Filtra</string>
    <string name="all_field_required_text">Tutti i campi sono obbligatori</string>
    <string name="success_login_text">Login effettuata con successo</string>
    <string name="email_password_wrong_text">Email o Password errate</string>
    <string name="email_wrong_text">Inserisci un indirizzo email corretto</string>
    <string name="check_email_text">Controlla la tua email</string>
    <string name="error_forgot_password_text">Impossibile inviare, errore</string>
    <string name="error_signup_text">Errore nella registrazione</string>
    <string name="successful_signup_text">Registrazione avvenuta con successo</string>
    <string name="different_password_text">Le password inserite sono diverse</string>
    <string name="near_to_text">Vicino a:</string>
    <string name="distance_text">Distante:</string>
    <string name="your_address_text">Il tuo indirizzo</string>
    <string name="attention_title_text">ATTENZIONE</string>
    <string name="new_ride_warning_text">Per poter creare una nuova Ride devi inserire un\'immagine di profilo.</string>
    <string name="book_ride_warning_text">Per poter richiedere una Ride devi inserire un\'immagine di profilo.</string>
    <string name="dont_insert_text">Non inserire</string>
    <string name="insert_text">Inserisci</string>
    <string name="error_retry_text">C\'è stato un problema, riprova.</string>
    <string name="insert_address_text">Inserisci l\'indirizo in cui ti farai trovare</string>
    <string name="refused_message_text">Sembra che un utente ha rifiutato la tua Ride</string>
    <string name="accepted_message_text">Sembra che un utente ha accetto la tua Ride</string>
    <string name="interested_message_text">Sembra che un utente è interessato alla tua Ride</string>
    <string name="loading_text">Caricamento</string>
    <string name="delete_ride_text">Elimina Ride</string>
    <string name="delete_ride_alert_text">Sei sicuro di voler eliminare questa Ride? Non potrai più tornare indietro.</string>
    <string name="not_delete_text">Non eliminare</string>
    <string name="request_success_text">Ride richiesta con successo</string>
    <string name="no_ride_text">Nessuna Ride nei dintorni</string>
    <string name="phone_number_val_text">Numero di telefono:</string>
    <string name="your_rides_text">Le tue Rides</string>
    <string name="empty_message_text">Non puoi mandare messaggi vuoti</string>
    <string name="type_message_text">Scrivi un messaggio…</string>
    <string name="no_chat_text">Non puoi mandare dei messaggi perché non hai condiviso nessuna Rides con qualcuno</string>
    <string name="add_on_calendar_text">Vuoi inserire l\'evento al tuo calendario?</string>
</resources>