<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:id="@+id/action_map"
            android:title="@string/map_text"
            android:icon="@drawable/ic_baseline_map_24" />
        <item android:id="@+id/action_search"
            android:title="@string/search_text"
            android:icon="@drawable/ic_baseline_search_24" />
        <item
            android:id="@+id/action_disabled"
            android:title=""
            android:enabled="false"/>
        <item android:id="@+id/action_summary"
            android:title="@string/rides_text"
            android:icon="@drawable/ic_baseline_directions_car_24" />
        <item android:id="@+id/action_settings"
            android:title="@string/settings_text"
            android:icon="@drawable/ic_baseline_settings_24" />
</menu>