<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".activities.AddInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <EditText
            android:id="@+id/start_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/main_color_border"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="8dp"
            android:hint="@string/name_text"
            android:inputType="text"
            android:padding="8dp" />

        <EditText
            android:id="@+id/start_surname"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/main_color_border"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="8dp"
            android:hint="@string/surname_text"
            android:inputType="text"
            android:padding="8dp" />

        <EditText
            android:id="@+id/start_address"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/main_color_border"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="5dp"
            android:gravity="center|start"
            android:paddingHorizontal="8dp"
            android:focusable="false"
            android:hint="@string/your_address_text"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/start_select_uni"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/main_color_border"
            android:hint="@string/select_uni_text"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/main_color_border"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/start_number"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/main_color_border"
            android:drawableStart="@drawable/ic_baseline_local_phone_24"
            android:drawablePadding="8dp"
            android:hint="@string/phone_number_text"
            android:inputType="number"
            android:padding="8dp" />

        <CheckBox
            android:id="@+id/start_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:drawablePadding="8dp"
            android:buttonTint="@color/main_color"
            android:text="@string/car_checkbox_text"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/start_button_text"
            android:textSize="18sp"
            app:cornerRadius="30dp" />

    </LinearLayout>

</ScrollView>