<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/position_to_start_text"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/text_view_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_condensed_bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/date_and_time_text"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/text_view_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_condensed_bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/notes_text"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/text_view_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_condensed_bold"/>
            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_ride_button"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="4dp"
                android:backgroundTint="@color/danger_bg"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/delete_ride_text"
                app:cornerRadius="20dp"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>